fix modal shadow + userVisibilityCounterBubble

--- a/static/styles/newForm.css
+++ b/static/styles/newForm.css
@@ -13,11 +13,11 @@
     padding-top: 20px;
 }
 
-.first-option{
+.first-option {
     height: 55px;
 }
 
-.btn-delete-option{
+.btn-delete-option {
     margin-top: -10px;
 }
 
@@ -27,9 +27,10 @@
     margin-top: 10px;
 }
 
-#addUserInput{
+#addUserInput {
     margin-top: 6px;
 }
+
 .card-user {
     margin-top: 20px;
     border-radius: 30px;
@@ -68,7 +69,27 @@
     color: #000;
 }
 
-.error-email{
+.error-email {
     margin-top: 10px;
     text-align: center;
+}
+
+.includer {
+    position: relative;
+}
+
+.badge.badge-success {
+    background-image: linear-gradient(to right, #09b3ef 0%, #1e76e2 51%);
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    border-radius: 30px;
+}
+
+.modal-backdrop {
+  display: none;
+}
+
+.modal {
+  background: rgba(0,0,0,0.5);
 }
